--- a/quiz_2_3/jack.ipynb
+++ b/quiz_2_3/jack.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 168,
    "id": "33c0bb01-d6f3-41cb-971f-3cb7c9dd0ae6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 169,
    "id": "b26cd95e-492b-4055-b30a-1ed2bb69363b",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "[2, 5, 3, 9, 5, 2]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 170,
    "id": "f88bd544-4d78-496c-b2d3-bdde9f353fff",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "list"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 171,
    "id": "59fb13a2-f687-486a-b238-5411170baaa6",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "array([2, 5, 3, 9, 5, 2])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 172,
    "id": "2153a802-aa35-4f53-914e-ab96b87d525f",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 173,
    "id": "cc33f204-3610-4145-96c2-1bc8ea05e4ee",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 174,
    "id": "2242199b-971c-48c9-b609-a6dbf228670b",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "(array([1.2, 6. , 7.6, 5. ]), dtype('float64'))"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 175,
    "id": "5bd267ba-45ad-48f8-80c2-cc9cf0b3734e",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "(6,)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 176,
    "id": "6816add6-4a03-43dd-add9-0a7841f9d814",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 177,
    "id": "446a3c85-c68e-446b-a089-700d060dfabc",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 178,
    "id": "838ddd86-109a-4bea-a010-ef9be9823662",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "       [1., 1., 1.]])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 179,
    "id": "7fa3307d-436d-4d4f-8510-2cfc447a8c27",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 180,
    "id": "2751a451-3ff7-4a03-b4ff-144941479951",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "array([17, 11, 14])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 181,
    "id": "03475163-0491-46c4-99ce-af213d6333ec",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        " array([0, 1, 2, 3]))"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 182,
    "id": "d6dc4fa4-0f8f-4577-9bbd-03c06b548bef",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "array([14, 38, 62])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,12 +409,12 @@
     "# The result is a new vecor the same length as the multiplied vector, with each value being the sum of all the products.\n",
     "# In this example, this is the new vector:\n",
     "# [0*0 + 1*1 + 2*2 + 3*3, 0*4 + 1*5 + 2*6 + 3*7, 0*8 + 1*9 + 2*10 + 3*11]\n",
-    "# This result"
+    "# This results in [14, 38, 62]."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 183,
    "id": "f7db0808-53c2-460c-8922-f16f7412fe26",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "array([14, 38, 62])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 184,
    "id": "76de10d8-c980-4c33-ba7a-d73a7ab5dbf7",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 185,
    "id": "d27806cf-d9fb-40fd-bcac-3809d47e1880",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
        "'value'"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 186,
    "id": "5b910244-94e7-4357-9aa6-14d1eae64544",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "42"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 187,
    "id": "543bd3f4-351b-4f23-a1fb-06c3b8bbabdb",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "'tuple_key_value'"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 188,
    "id": "eb62573d-da4e-4597-a96a-a79666ab4f6c",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        " 'k2': [1, 1, 2, 3, 3, 4, 4]}"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 189,
    "id": "0826ed1b-a650-4ff5-9d8f-c0c303690022",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
        "6  two   4"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 190,
    "id": "892940f9-071a-4c1d-a86b-f96b58bca0db",
    "metadata": {},
    "outputs": [],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 191,
    "id": "427010db-3308-4843-a78b-a03d9d5c4bde",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 192,
    "id": "a9e4a52f-b4af-4522-a31c-44bdf149c07c",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
        "New York    8    9     10    11"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 193,
    "id": "f9e8a8cf-61a7-44fb-8de6-677222739540",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 194,
    "id": "c7dfb51c-67fa-4bc3-ad9e-0066fb5f8b5a",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
        "2    Joe   90            160"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 195,
    "id": "2e8c3181-3955-4c77-ab84-71f3f6ce8e34",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
        "Index(['Name', 'Age', 'Height(in cm)'], dtype='object')"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 196,
    "id": "bcb6b4cf-dad7-4dac-b413-da18ac01f181",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
        "2   90            160"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 197,
    "id": "53885908-7f3f-41a9-bfd4-8ce2eeb5bef2",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 198,
    "id": "16ea46cc-30b4-4779-abf2-e761d24d2b4e",
    "metadata": {},
    "outputs": [],
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 199,
    "id": "21afc3df-4194-4667-b058-cc279e58d37d",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
        "<Axes: xlabel='Name'>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 200,
    "id": "0647e6e8-97d3-4c69-a9cc-e424b3ecbe13",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1040,7 @@
        "<Axes: xlabel='Name'>"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 201,
    "id": "b0acaade-83a4-4d12-a85a-fe9e3153bcba",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 202,
    "id": "cc8851ea-6038-4c66-a63c-9d1c7913d37a",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 203,
    "id": "0b53c6b4-988f-4b0b-87be-131ea176bd9e",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 204,
    "id": "3f39ba84-9ee5-4361-826a-ff85ffff98ca",
    "metadata": {
     "scrolled": true
@@ -1215,9 +1215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1229,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
