--- a/lab6/lab6.ipynb
+++ b/lab6/lab6.ipynb
@@ -645,7 +645,7 @@
    "metadata": {},
    "source": [
     "It's good at predicting 1, maybe because it's so visually simple.\n",
-    "It has a hard time predicting 9, maybe because it's more likely to look like something else, like 7 if the person draws the circular part too squeezed."
+    "It has a hard time predicting 9. The confusion matrix shows that it confuses 9 with 4 and 8 a lot. Maybe 8 because sometimes people draw 9 with the tail going up too high, and 4 because it kind of looks like a 9 with a straight tail and a less round circular part."
    ]
   },
   {
