--- a/lab6/lab6.ipynb
+++ b/lab6/lab6.ipynb
@@ -644,7 +644,7 @@
    "id": "e1b45dde-67ad-46ce-a8da-a71e7672f025",
    "metadata": {},
    "source": [
-    "It's good at predicting 1, maybe because 1 is so visually simple. It has a hard time predicting 9. The confusion matrix shows that it confuses 9 with 4 and 8 a lot. Maybe 8 because sometimes people draw 9 with the tail going up too high which can make it look like 8, and 4 because 4 kind of looks like a 9 with a straight tail and a less round circular part."
+    "It's good at predicting 0, maybe because 0 is so visually simple. It has a hard time predicting 9. The confusion matrix shows that it confuses 9 with 7 a lot, maybe because 9 can kind of look like 7 if the circular part is drawn too squished."
    ]
   },
   {
